--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zeroleak</groupId>
     <artifactId>throwing-supplier</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>throwing-supplier</name>
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
@@ -84,5 +83,6 @@
         <connection>scm:git:https://github.com/zeroleak/throwing-supplier.git</connection>
         <url>http://github.com/zeroleak/throwing-supplier</url>
         <developerConnection>scm:git:https://github.com/zeroleak/throwing-supplier.git</developerConnection>
-    </scm>
+      <tag>1.0.0</tag>
+  </scm>
 </project>
