--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zeroleak</groupId>
     <artifactId>throwing-supplier</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
     <name>throwing-supplier</name>
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
@@ -83,6 +83,6 @@
         <connection>scm:git:https://github.com/zeroleak/throwing-supplier.git</connection>
         <url>http://github.com/zeroleak/throwing-supplier</url>
         <developerConnection>scm:git:https://github.com/zeroleak/throwing-supplier.git</developerConnection>
-      <tag>1.0.3</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
