--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zeroleak</groupId>
     <artifactId>throwing-supplier</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
     <name>throwing-supplier</name>
     <description>Guava cache supplier extension to memoize exceptions, fallback, expiration control.</description>
     <url>https://github.com/zeroleak/throwing-supplier</url>
@@ -101,7 +100,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>3.2.0</version>
+                <configuration>
+                    <additionalOptions>-html5 -Xdoclint:none</additionalOptions>
+                    <failOnError>false</failOnError>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -137,7 +140,7 @@
         <connection>scm:git:https://github.com/zeroleak/throwing-supplier.git</connection>
         <url>http://github.com/zeroleak/throwing-supplier</url>
         <developerConnection>scm:git:https://github.com/zeroleak/throwing-supplier.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.0.4</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
