--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zeroleak</groupId>
     <artifactId>throwing-supplier</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.0.7</version>
     <name>throwing-supplier</name>
     <description>Guava cache supplier extension to memoize exceptions, fallback, expiration control.</description>
     <url>https://github.com/zeroleak/throwing-supplier</url>
@@ -77,7 +77,7 @@
         <connection>scm:git:https://github.com/zeroleak/throwing-supplier.git</connection>
         <url>http://github.com/zeroleak/throwing-supplier</url>
         <developerConnection>scm:git:https://github.com/zeroleak/throwing-supplier.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.0.7</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
